# polars-bio

./: Cargo.toml  pyproject.toml
docs/: features.md
openspec/changes/update-vcf-multisample-genotypes-schema/: proposal.md  tasks.md
openspec/changes/update-vcf-multisample-genotypes-schema/specs/vcf/: spec.md
polars_bio/: __init__.py  context.py  io.py  metadata_extractors.py  pileup_op.py
src/: lib.rs  option.rs  scan.rs  write.rs
tests/: test_context_options.py  test_io_bam.py  test_io_gff.py  test_lazy_streaming_fix.py  test_projection_pushdown.py  test_vcf_format_columns.py  test_vcf_read_options.py  test_vcf_write.py
tests/data/io/bam/: 10x_pbmc_tags.bam  10x_pbmc_tags.bam.bai
tests/data/io/gff/: 1_multi_chrom.gff3.gz.tbi
tests/data/io/vcf/: vep_annotate_test.vcf
