[package]
name = "polars_bio"
version = "0.25.0"
edition = "2021"

[lib]
name = "polars_bio"
crate-type= ["cdylib"]




[dependencies]
datafusion-python = "50.1.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3"] }
pyo3-log = "0.12.4"


datafusion = { version = "50.3.0"}
arrow = "56.1.0"
arrow-schema = "56.1.0"
arrow-array = { version = "56.1.0", features = ["ffi"] }
tokio = {version = "1.42.0", features = ["full", "tracing"]}
log = "0.4.22"
tracing = { version = "0.1.41", features = ["log"] }
futures-util = "0.3.31"

datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-core = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-gff = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-fastq = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-bam = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-cram = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-bed = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-fasta = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }
datafusion-bio-format-pairs = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "79a33e2" }

datafusion-bio-function-ranges = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", rev = "9ef64a1f16bedf4096ae37a0b332ce15f3a18255" }
datafusion-bio-function-pileup = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", rev = "9ef64a1f16bedf4096ae37a0b332ce15f3a18255", default-features = false }

async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.8.5"
serde_json = "1.0"
